// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions/log clearLogs dispatches the correct acction when clearing logs 1`] = `
Array [
  Object {
    "error": false,
    "meta": Object {
      "message": undefined,
    },
    "payload": undefined,
    "type": "@flexget/log/LOG_CLEAR",
  },
]
`;

exports[`actions/log setLines dispatches the correct acction when setting lines 1`] = `
Array [
  Object {
    "error": false,
    "meta": Object {
      "message": undefined,
    },
    "payload": 400,
    "type": "@flexget/log/LOG_LINES",
  },
]
`;

exports[`actions/log setQuery dispatches the correct acction when setting query 1`] = `
Array [
  Object {
    "error": false,
    "meta": Object {
      "message": undefined,
    },
    "payload": 400,
    "type": "@flexget/log/LOG_QUERY",
  },
]
`;
